--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -26,6 +26,26 @@
     dest: "{{ role_path }}/files/running_configs/{{ inventory_hostname }}.cfg"
 
 
+- name: SANITIZE THE RUNNING CONFIGS
+  lineinfile:
+    regexp: "! Last configuration .*"
+    path: "{{ role_path }}/files/running_configs/{{ inventory_hostname }}.cfg"
+    state: absent
+
+- name: REMOVE NON CONFIG LINES
+  lineinfile:
+    path: "{{ role_path }}/files/running_configs/{{ inventory_hostname }}.cfg"
+    line: "Building configuration..."
+    state: absent
+
+- name: REMOVE NON CONFIG LINES - REGEXP
+  lineinfile:
+    path: "{{ role_path }}/files/running_configs/{{ inventory_hostname }}.cfg"
+    regexp: 'Current configuration.*'
+    state: absent
+
+
+
 - name: CHECK IF OOB CHANGES EXIST
   command: >-
     diff "{{ role_path }}"/files/running_configs "{{ role_path }}"/files/repo_dir/"{{ archive_dir }}"
@@ -42,17 +62,13 @@
   delegate_to: localhost
   run_once: true
 
-- name: GENERATE DIFF REPORT
-  template:
-    src: diff_report.j2
-    dest: "{{ role_path }}/files/diff_report.txt"
+
+- name: TASKS IF AN OOB CHANGE IS DETECTED
+  include_tasks: oob.yaml
   when: difference.rc != 0
   delegate_to: localhost
   run_once: true
 
-- name: STOP PLAY EXECUTION
-  assert:
-    that: difference.rc == 0
-    msg: "Caretaker has identified an OOB change on your network. Manual sync required... Aborting deployment."
-  delegate_to: localhost
-  run_once: true
+
+- meta: end_play
+  when: difference.rc != 0
