fix for end_play fail

--- a/running/site1_remote1/config/running.cfg
+++ b/running/site1_remote1/config/running.cfg
@@ -1,6 +1,6 @@
 Building configuration...
 
-Current configuration : 5183 bytes
+Current configuration : 5196 bytes
 !
 !
 version 16.8
@@ -140,7 +140,7 @@ interface Loopback0
  ip ospf network point-to-point
 !
 interface Loopback1
- description INTERNAL INTERFACE LOOPBACK1
+ description INTERNAL INTERFACE LOOPBACK1 - NEW CHANGE
  ip address 192.168.2.1 255.255.255.0
  ip ospf network point-to-point
 !
